style: manifest and style update

--- a/assets/index.css
+++ b/assets/index.css
@@ -51,10 +51,13 @@ body {
   margin: 0;
   /* display: flex;
   place-items: center; */
-	/* min-width: 30rem; */
 	/* min-height: 25rem; */
 }
 
+.popup {
+
+	min-width: 30rem;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
