feat: search supported

--- a/assets/index.css
+++ b/assets/index.css
@@ -35,6 +35,8 @@ button:focus-visible {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+
+	max-height: 30rem
 }
 
 a {
